# codex_project_1

./: .env.example  README.md  app.js  data.js  index.html  pyproject.toml  styles.css
.swift-cache/1BID17TDKL5S8/: Accessibility-14JBEP228SSWD.pcm  ApplicationServices-1CRCAN744IO4N.pcm  CFNetwork-31P8GDC5EWL41.pcm  CUPS-2KH16NWVLNVO0.pcm  Cocoa-3ISOBR0QN4S2Z.pcm  ColorSync-1KWH2T10UXMVF.pcm  CoreData-3U3WCU0AV8KFN.pcm  CoreFoundation-1YUXQIQY0O2PG.pcm  CoreGraphics-3BVRDEA9TPJO6.pcm  CoreImage-2GOW3UHHPA7JV.pcm  CoreText-2TWBA4D5T9PK8.pcm  CoreTransferable-2R8U0VHQ829LU.pcm  CoreVideo-2TUG535GNYVWG.pcm  DataDetection-VJZRRQZ9LJ5H.pcm  DeveloperToolsSupport-3D8UR8C75BBDP.pcm  DiskArbitration-QUEIKMA743UI.pcm  Dispatch-TQFI8E3F5ULS.pcm  IOSurface-C02TFLLHKUMB.pcm  ImageIO-1TXEVO4OVZF0F.pcm  (+38 more)
config/: providers.json
dashboard/: app.js  index.html  styles.css
excel/: Shinhancard_20260401130623.xls  Shinhancard_20260401130658.xls  hyundaicard_202604011118521146506431_1070.xlsx  inquiry_39420014951_20260401144942.xls  inquiry_39420014951_20260401145025.xls  신한은행_거래내역조회_20260401150044.xls  신한은행_거래내역조회_20260401150134.xls  신한은행_거래내역조회_20260401150215.xls  신한은행_거래내역조회_20260401150244.xls  카드이용내역_20250401_20260401.xls
reports/: account_transactions_deduped.csv  account_transactions_excluding_card_payments.csv  card_transactions_deduped.csv  category_summary.csv  input_manifest.json  ledger_summary.md  monthly_summary.csv  notion_transactions_import.csv  pdf_extracted_text.txt
scripts/: analyze_excel_ledger.py  extract_pdf_text.swift
tests/: test_analysis.py
(+133 files in other folders)
